# fw-mini

./: .gitignore  README.md  build_console  build_console.bat  build_linux  build_win32.bat  makejs_osx  makejs_win32.bat  makelib_linux  makelib_osx  makelib_win32.bat
appsrc/: MEXLIST.h  MEXPORT.h  MPROFILE.cpp  MPROFILE.h  README.cpp  app.cpp  appjs.cpp  appui.cpp  boot.cpp  boot.h  capp.cpp  cboot.h  cbutton.cpp  cbutton.h  ccontrol.cpp  ccontrol.h  ccppmain.cpp  centui.h  cfilemanager.cpp  cfilemanager.h  cgraphics.cpp  cgraphics.h  cimageview.cpp  cimageview.h  cjsapp.cpp  cjsmain.cpp  clabel.cpp  clabel.h  clambda.cpp  clambda.h  clayer.cpp  clayer.h  clog.cpp  clog.h  cmodmeta.cpp  cmodmeta.h  cmodobjs.cpp  cmodobjs.h  cmodplugin.cpp  cmodplugin.h  (+169 more)
appts/: package.json  tsconfig.json  tsdev.json  tsgen.json  wp-app.js  wp-dev.js  wp-gen.js  wp-uni.js
host_android/: CLEAN  CLEAN.bat  build.gradle  settings.gradle
host_android/app/: CMakeLists.txt  build.gradle
host_android/app/src/main/: AndroidManifest.xml
host_android/app/src/main/cpp/: AndroidApi.cpp  AndroidApi.h  DrawView.cpp  MAndrdBundle.cpp  MAndrdDrawView.cpp  MAndrdImageFactory.cpp  MAndrdImageFactory.h  MAndrdMainActivity.cpp  MainActivity.cpp  MainView.cpp  jnihelper.cpp  jnihelper.h  mjnihelper.cpp  mjnihelper.h
host_android/app/src/main/java/src/app/mini/: AndroidApi.java  DrawView.java  MAndrdBundle.java  MAndrdDrawView.java  MAndrdImageFactory.java  MAndrdMainActivity.java  MainActivity.java  MainView.java
host_android/app/src/main/res/values/: strings.xml  themes.xml
host_linux/: init
(+188 files in other folders)
